<resources>
    <string name="app_name">Project</string>
    <string name="login">Login</string>
    <string name="email_fill">Email/No.Handphone</string>
    <string name="password_fill">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="atasan_wanita">Atasan Wanita</string>
    <string name="desc">The Excecutive \nSize M \nRp50.000</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="no_hp">No. HP</string>
    <string name="repass">Re-password</string>
    <string name="wanita">Wanita</string>
    <string name="pria">Pria</string>
    <string name="atasan">Atasan</string>
    <string name="cari">Cari</string>
    <string name="sepatu_wanita">Sepatu/Sandal Wanita</string>
    <string name="aksesoris_wanita">Aksesoris Wanita</string>
    <string name="atasan_pria">Atasan Pria</string>
    <string name="tas_pria">Tas Pria</string>
</resources>