<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".Activity.Login">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/logo"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-18dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/hanger" />

    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    app:cardCornerRadius="28dp"
    android:layout_marginBottom="-28dp"
    >

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="99dp"
                android:layout_height="67dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:paddingBottom="10dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/outline"
                android:fontFamily="@font/poppins_bold"
                android:hint="@string/email_fill"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/outline"
                android:drawableEnd="@drawable/baseline_remove_red_eye_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/poppins_bold"
                android:hint="@string/password_fill"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#040404"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/lupa_password"
                android:textSize="10sp"

                />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/login"
                android:textColor="@color/black"
                android:onClick="login"
                android:layout_marginBottom="30dp" />


        </LinearLayout>

</androidx.cardview.widget.CardView>

</RelativeLayout>